# bulls-and-cows

./: .gitignore  CMakeLists.txt  README.md
include/: shared_memory.h
src/: client.cpp  server.cpp  shared_memory.cpp  utils.cpp
